name:                etcdpp
version:             0.1.0.0
synopsis:            etcd Client (API v2)
description:         See README.md
homepage:            https://github.com/kim/etcdpp
bug-reports:         https://github.com/kim/etcdpp/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Kim Altintop
maintainer:          kim.altintop@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/kim/etcdpp

library
  exposed-modules:
    Etcd.V2.Client
    Etcd.V2.Internal.API
    Etcd.V2.Lens
    Etcd.V2.Types

  build-depends:
      aeson                 (>= 0.8 && < 0.10) || > 0.10
    , base                  >= 4.8 && < 4.9
    , bytestring
    , http-client
    , http-types
    , lens
    , mtl
    , servant
    , servant-client
    , text
    , time
    , transformers
    , unordered-containers

  ghc-options:
    -Wall
    -fwarn-tabs
    -funbox-small-strict-fields

  hs-source-dirs:    src
  default-language:  Haskell2010
