name:                etcd-api
version:             0.1.0.0
synopsis:            Types modelling etcd's API
homepage:            https://github.com/kim/etcdpp
bug-reports:         https://github.com/kim/etcdpp/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Kim Altintop
maintainer:          kim.altintop@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/kim/etcdpp

library
  exposed-modules:
    Control.Monad.Trans.Etcd
    Data.Etcd.Free
    Data.Etcd.Lens
    Data.Etcd.Types

  other-modules:
    Data.Etcd.Internal

  build-depends:
      aeson                 (>= 0.8 && < 0.10) || > 0.10
    , base                  >= 4.8 && < 5
    , bytestring-conversion
    , exceptions
    , free                  >= 4.12
    , http-types
    , mtl
    , profunctors
    , text
    , time
    , transformers
    , unordered-containers

  ghc-options:
    -Wall
    -O
    -fwarn-tabs
    -funbox-small-strict-fields

  hs-source-dirs:    src
  default-language:  Haskell2010
