name:                etcd-recipes
version:             0.1.0.0
synopsis:            etcd recipes

description:
    "Recipes" for building distributed datastructures/algorithms on top of etcd

homepage:            https://github.com/kim/etcdpp
bug-reports:         https://github.com/kim/etcdpp/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Kim Altintop
maintainer:          kim.altintop@gmail.com
category:            Network
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/kim/etcdpp

library
  exposed-modules:
    Database.Etcd.Barrier
    Database.Etcd.DoubleBarrier
    Database.Etcd.Election
    Database.Etcd.PriorityQueue
    Database.Etcd.Queue

  build-depends:
      async
    , base           >= 4.8 && < 5
    , etcd-api
    , exceptions
    , free
    , text
    , transformers

  ghc-options:
    -Wall
    -O
    -fwarn-tabs
    -funbox-small-strict-fields

  hs-source-dirs:    src
  default-language:  Haskell2010
