name:                etcd-simple
version:             0.1.0.0
synopsis:            A simple `etcd` client
homepage:            https://github.com/kim/etcdpp
bug-reports:         https://github.com/kim/etcdpp/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Kim Altintop
maintainer:          kim.altintop@gmail.com
category:            Database
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/kim/etcdpp

library
  exposed-modules:
    Database.Etcd

  build-depends:
      aeson                 (>= 0.8 && < 0.10) || > 0.10
    , base                  >= 4.8 && < 5
    , bifunctors
    , bytestring
    , bytestring-conversion
    , etcd-api
    , exceptions
    , free
    , http-client
    , http-types
    , lens
    , mtl
    , text
    , tinylog
    , transformers

  hs-source-dirs:    src
  default-language:  Haskell2010
